--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "A sandbox for testing Web Component accessibility",
   "main": "main.js",
   "dependencies": {
-    "browserify": "~2.35.4"
   },
   "devDependencies": {
-    "coffeeify": "~0.5.2"
+    "grunt": "~0.4.1",
+    "grunt-sass": "~0.8.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-connect": "~0.2.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-jade": "~0.4.0",
+    "grunt-contrib-coffee": "~0.7.0"
   },
   "scripts": {
     "test": ""
