--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "A sandbox for testing Web Component accessibility",
   "main": "main.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-sass": "~0.8.0",
@@ -15,7 +14,11 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-jade": "~0.4.0",
-    "grunt-contrib-coffee": "~0.7.0"
+    "grunt-browserify": "~1.2.11",
+    "coffeeify": "~0.5.2",
+    "browserify": "~2.36.1",
+    "grunt-concurrent": "~0.4.2",
+    "load-grunt-tasks": "~0.2.0"
   },
   "scripts": {
     "test": ""
