--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "A sandbox for testing Web Component accessibility",
   "main": "main.js",
-  "dependencies": {},
+  "dependencies": {
+    "webcomponents.js": "~0.5.5-1"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-sass": "~0.8.0",
